# pkg/types/product.go
@@ -1,0 +1,9 @@
+package types
+
+type ProductPayload struct {
+	Name        string  `json:"name"`
+	Description string  `json:"description"`
+	Image       string  `json:"image"`
+	Price       float64 `json:"price"`
+	Quantity    int     `json:"quantity"`
+}
