# pkg/types/user.go
@@ -1,0 +1,23 @@
+package types
+
+type LoginUserPayload struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type RegisterUserPayload struct {
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
+	Email     string `json:"email"`
+	Password  string `json:"password"`
+}
+
+type TokenPayload struct {
+	ID    uint   `json:"id"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
+
+type LoginResponsePayload struct {
+	Token string `json:"token"`
+}
