# pkg/validations/product.go
@@ -2,21 +2,26 @@ package validations
 
 import (
 	"encoding/json"
-	"errors"
+	"io"
+	"net/http"
 
+	"github.com/ZUBERKHAN034/go-ecom/pkg/types"
 	"github.com/faceair/jio"
 )
 
 type productValidation struct{}
 
-func (p *productValidation) CreateProduct(payload interface{}) error {
-	// Marshal the payload to JSON
-	payloadBytes, err := json.Marshal(payload)
+func (p *productValidation) Create(req *http.Request) (*types.ProductPayload, error) {
+	// Ensure the body is closed after reading it	
+	defer req.Body.Close()
+
+	// Read the request body
+	reqBodyJson, err := io.ReadAll(req.Body)
 	if err != nil {
-		return errors.New("failed to marshal payload to JSON: " + err.Error())
+		return nil, err
 	}
 
-	// Define the schema for the payloads
+	// Define the schema for the payload validation
 	schema := jio.Object().Keys(jio.K{
 		"name":        jio.String().Required(),
 		"description": jio.String().Required(),
@@ -26,11 +31,19 @@ func (p *productValidation) CreateProduct(payload interface{}) error {
 	})
 
 	// Validate the JSON payload against the schema
-	if _, err := jio.ValidateJSON(&payloadBytes, schema); err != nil {
-		return err
+	_, err = jio.ValidateJSON(&reqBodyJson, schema)
+	if err != nil {
+		return nil, err
 	}
 
-	return nil
+	// Unmarshal the validated JSON into the ProductPayload struct
+	var productPayload types.ProductPayload
+	err = json.Unmarshal(reqBodyJson, &productPayload)
+	if err != nil {
+		return nil, err
+	}
+
+	return &productPayload, nil
 }
 
 var Product = &productValidation{}
