# pkg/validations/user.go
@@ -2,67 +2,82 @@ package validations
 
 import (
 	"encoding/json"
-	"errors"
+	"io"
+	"net/http"
 
+	"github.com/ZUBERKHAN034/go-ecom/pkg/types"
 	"github.com/faceair/jio"
 )
 
 type userValidation struct{}
 
-func (u *userValidation) Login(payload interface{}) error {
-	// Marshal the payload to JSON
-	payloadBytes, err := json.Marshal(payload)
+func (u *userValidation) Login(req *http.Request) (*types.LoginUserPayload, error) {
+
+	// Ensure the body is closed after reading it
+	defer req.Body.Close()
+
+	// Read the request body
+	reqBodyJson, err := io.ReadAll(req.Body)
 	if err != nil {
-		return errors.New("failed to marshal payload to JSON: " + err.Error())
+		return nil, err
 	}
 
-	// Define the schema for the payloads
+	// Define the schema for the payload validation
 	schema := jio.Object().Keys(jio.K{
-		"email": jio.String().Transform(func(ctx *jio.Context) {
-			// Define your regex for email validation
-			regex := `^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$`
-			if !RegexMatch(ctx.Value.(string), regex) {
-				ctx.Abort(errors.New("field `email` value invalid"))
-			}
-		}),
-		"password": jio.String().Min(8).Max(10).Required(),
+		"email":    jio.String().Required(),
+		"password": jio.String().Required(),
 	})
 
 	// Validate the JSON payload against the schema
-	if _, err := jio.ValidateJSON(&payloadBytes, schema); err != nil {
-		return err
+	_, err = jio.ValidateJSON(&reqBodyJson, schema)
+	if err != nil {
+		return nil, err
 	}
 
-	return nil
+	// Unmarshal the validated JSON into the LoginUserPayload struct
+	var loginUserPayload types.LoginUserPayload
+	err = json.Unmarshal(reqBodyJson, &loginUserPayload)
+	if err != nil {
+		return nil, err
+	}
+
+	// Return the validated and parsed payload
+	return &loginUserPayload, nil
 }
 
-func (u *userValidation) Register(payload interface{}) error {
-	// Define the schema for the payloads
+func (u *userValidation) Register(req *http.Request) (*types.RegisterUserPayload, error) {
+
+	// Ensure the body is closed after reading it
+	defer req.Body.Close()
+
+	// Read the request body
+	reqBodyJson, err := io.ReadAll(req.Body)
+	if err != nil {
+		return nil, err
+	}
+
+	// Define the schema for the payload validation
 	schema := jio.Object().Keys(jio.K{
 		"firstName": jio.String().Required(),
 		"lastName":  jio.String().Required(),
-		"email": jio.String().Transform(func(ctx *jio.Context) {
-			// Define your regex for email validation
-			regex := `^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$`
-			if !RegexMatch(ctx.Value.(string), regex) {
-				ctx.Abort(errors.New("field `email` value invalid"))
-			}
-		}),
-		"password": jio.String().Min(8).Max(10).Required(),
+		"email":    jio.String().Required(),
+		"password": jio.String().Required(),
 	})
 
-	// Marshal the payload to JSON
-	payloadBytes, err := json.Marshal(payload)
-	if err != nil {
-		return errors.New("failed to marshal payload to JSON: " + err.Error())
-	}
-
 	// Validate the JSON payload against the schema
-	if _, err := jio.ValidateJSON(&payloadBytes, schema); err != nil {
-		return err
+	_, err = jio.ValidateJSON(&reqBodyJson, schema)
+	if err != nil {
+		return nil, err
 	}
 
-	return nil
-}
+	// Unmarshal the validated JSON into the RegisterUserPayload struct
+	var registerUserPayload types.RegisterUserPayload
+	err = json.Unmarshal(reqBodyJson, &registerUserPayload)
+	if err != nil {
+		return nil, err
+	}
 
+	// Return the validated and parsed payload
+	return &registerUserPayload, nil
+}
 var User = &userValidation{}
